[skip] Prevented photos from overflowing the width of small phones’ screens (2m)

--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -10,7 +10,7 @@
     input[type="file"] { display: none; }
 
     img {
-      max-width: 360px;
+      max-width: 100%;
       max-height: 360px;
     }
 
