--- a/app/assets/stylesheets/recipe.scss
+++ b/app/assets/stylesheets/recipe.scss
@@ -5,7 +5,7 @@ section.recipe {
   & > img.photo {
     float: right;
     margin: 3em 0 3em 3em;
-    max-width: 360px;
+    max-width: 100%;
     max-height: 360px;
   }
 
